updated home page

--- a/app.json
+++ b/app.json
@@ -4,13 +4,15 @@
     "slug": "MABPortal",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/JMA_Logo.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/JMA_Logo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ffffff",
+      "height": 50,
+      "width": 50
     },
     "ios": {
       "supportsTablet": true
