--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "express": "^4.19.2",
     "link": "^2.1.1",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.1",
